--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme"
         tools:targetApi="m">
         <activity android:name=".MainActivity"
-            android:theme="@style/fullScreen"
+            android:theme="@style/FullScreen"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
